include/draper.h

/**
 * GDT tolerance type codes (must match draper_mesh::gdt_check::GdtCheckType).
 */
typedef enum DraperGdtType {
  Flatness = 0,
  Straightness = 1,
  Circularity = 2,
  Cylindricity = 3,
  Position = 4,
  Parallelism = 5,
  Perpendicularity = 6,
  Angularity = 7,
  Runout = 8,
  ProfileOfLine = 9,
  ProfileOfSurface = 10,
  Unsupported = 99,
} DraperGdtType;
/**
 * C-compatible result codes returned by every FFI function.
 */
typedef enum DraperResult {
  /**
   * Operation succeeded.
   */
  Success = 0,
  /**
   * An invalid argument was passed (null pointer, out-of-range value, etc.).
   */
  InvalidArgument = -1,
  /**
   * The requested file was not found.
   */
  FileNotFound = -2,
  /**
   * Parsing of a file or data structure failed.
   */
  ParseError = -3,
  /**
   * A geometry evaluation failed (degenerate surface, NaN, etc.).
   */
  GeometryError = -4,
  /**
   * A topology error occurred (broken B-Rep, non-manifold, etc.).
   */
  TopologyError = -5,
  /**
   * Triangulation / mesh generation failed.
   */
  TriangulationError = -6,
  /**
   * Out of memory or resource limit exceeded.
   */
  OutOfMemory = -7,
  /**
   * An unclassified error occurred.
   */
  UnknownError = -99,
} DraperResult;
/**
 * Opaque document handle.
 */
typedef struct DraperDocument DraperDocument;
/**
 * Opaque mesh handle.
 */
typedef struct DraperMesh DraperMesh;
/**
 * Result of a GDT check (mirrors `GdtCheckResult`).
 */
typedef struct DraperGdtResult {
  double tolerance_value;
  double actual_deviation;
  uint8_t passed;
  uint8_t status_code;
} DraperGdtResult;
/**
 * Major version number of the 3Draper library.
 *
 * Incremented on incompatible API changes.
 */
uint32_t draper_version_major(void);
/**
 * Minor version number of the 3Draper library.
 *
 * Incremented on backwards-compatible additions.
 */
uint32_t draper_version_minor(void);
/**
 * Patch version number of the 3Draper library.
 *
 * Incremented on backwards-compatible bug fixes.
 */
uint32_t draper_version_patch(void);
/**
 * Version string in "major.minor.patch" format.
 *
 * The returned pointer is valid for the lifetime of the library and must NOT be freed.
 */
const char *draper_version_string(void);
/**
 * Check whether the library supports a named feature.
 *
 * Feature names are case-sensitive ASCII strings.  Currently recognised:
 *
 * | Feature name        | Meaning                                      |
 * |---------------------|----------------------------------------------|
 * | `step_import`       | STEP AP242 file import                       |
 * | `step_export`       | STEP AP242 file export                       |
 * | `stl_export`        | STL (ASCII & binary) export                  |
 * | `gltf_export`       | glTF 2.0 / GLB export                        |
 * | `obj_export`        | Wavefront OBJ export                         |
 * | `3mf_export`        | 3MF (3D Manufacturing Format) export         |
 * | `boolean_ops`       | Boolean union / subtract / intersect         |
 * | `healing`           | Geometry healing pipeline                    |
 * | `validation`        | Topology & STEP validation                   |
 * | `analytical_queries`| Volume, surface area, center of mass, inertia|
 * | `bvh`               | BVH acceleration for ray / proximity queries |
 * | `wasm`              | WebAssembly target support                   |
 */
bool draper_has_feature(const char *feature);
/**
 * Create a new empty document.
 *
 * Returns a pointer to the new document, or NULL on error.
 */
struct DraperDocument *draper_document_new(const char *name);
/**
 * Free a document.
 */
void draper_document_free(struct DraperDocument *doc);
/**
 * Add a box to the document.
 *
 * Returns `DraperResult::Success` on success, or an error code on failure.
 */
enum DraperResult draper_document_add_box(struct DraperDocument *doc,
                                          double dx,
                                          double dy,
                                          double dz);
/**
 * Add a cylinder to the document.
 *
 * Returns `DraperResult::Success` on success, or an error code on failure.
 */
enum DraperResult draper_document_add_cylinder(struct DraperDocument *doc,
                                               double radius,
                                               double height);
/**
 * Add a sphere to the document.
 *
 * Returns `DraperResult::Success` on success, or an error code on failure.
 */
enum DraperResult draper_document_add_sphere(struct DraperDocument *doc, double radius);
/**
 * Add a cone to the document.
 *
 * Returns `DraperResult::Success` on success, or an error code on failure.
 */
enum DraperResult draper_document_add_cone(struct DraperDocument *doc,
                                           double radius,
                                           double height);
/**
 * Add a torus to the document.
 *
 * Returns `DraperResult::Success` on success, or an error code on failure.
 */
enum DraperResult draper_document_add_torus(struct DraperDocument *doc,
                                            double major_radius,
                                            double minor_radius);
/**
 * Build an ICE engine model.
 *
 * Returns `DraperResult::Success` on success, or an error code on failure.
 */
enum DraperResult draper_document_add_engine(struct DraperDocument *doc);
/**
 * Triangulate the document and return a mesh.
 *
 * Returns a pointer to the new mesh on success, or NULL on error.
 * Use `draper_get_last_error()` for details on failure.
 */
struct DraperMesh *draper_document_triangulate(struct DraperDocument *doc);
/**
 * Free a mesh.
 */
void draper_mesh_free(struct DraperMesh *mesh);
/**
 * Get mesh vertex count.
 *
 * Returns 0 if mesh is null.
 */
uint32_t draper_mesh_vertex_count(const struct DraperMesh *mesh);
/**
 * Get mesh triangle count.
 *
 * Returns 0 if mesh is null.
 */
uint32_t draper_mesh_triangle_count(const struct DraperMesh *mesh);
/**
 * Get mesh vertex data (x, y, z triplets).
 * Caller must allocate buffer of size vertex_count * 3.
 *
 * Returns the number of vertices written, or 0 on error.
 */
uint32_t draper_mesh_get_vertices(const struct DraperMesh *mesh, double *out, uint32_t max_count);
/**
 * Get mesh triangle indices (i, j, k triplets).
 * Caller must allocate buffer of size triangle_count * 3.
 *
 * Returns the number of triangles written, or 0 on error.
 */
uint32_t draper_mesh_get_triangles(const struct DraperMesh *mesh,
                                   uint32_t *out,
                                   uint32_t max_count);
/**
 * Export mesh to STL file.
 *
 * Returns `DraperResult::Success` on success, or an error code on failure.
 */
enum DraperResult draper_mesh_export_stl(const struct DraperMesh *mesh,
                                         const char *path,
                                         int32_t binary);
/**
 * Export document to STEP file.
 *
 * Returns `DraperResult::Success` on success, or an error code on failure.
 */
enum DraperResult draper_document_export_step(struct DraperDocument *doc, const char *path);
/**
 * Get the number of solids in the document.
 *
 * Returns 0 if doc is null.
 */
uint32_t draper_document_solid_count(const struct DraperDocument *doc);
/**
 * Compute the total volume of all solids in the document.
 *
 * Uses the divergence theorem on a triangulated approximation of each solid.
 * Returns 0.0 if `doc` is null or the document has no solids.
 */
double draper_solid_volume(const struct DraperDocument *doc);
/**
 * Compute the total surface area of all solids in the document.
 *
 * Returns 0.0 if `doc` is null or the document has no solids.
 */
double draper_solid_surface_area(const struct DraperDocument *doc);
/**
 * Run topology validation on all solids in the document.
 *
 * Returns `DraperResult::Success` if no errors were found,
 * `DraperResult::TopologyError` if any error-level issues exist.
 * Detailed issues are stored in the thread-local error message
 * (accessible via `draper_get_last_error()`).
 */
enum DraperResult draper_validate_step(const struct DraperDocument *doc);
/**
 * Triangulate the document and export to glTF 2.0 (GLB binary).
 *
 * Convenience function that triangulates the document and writes
 * the result to a glTF file in a single call.
 *
 * Returns `DraperResult::Success` on success, or an error code on failure.
 */
enum DraperResult draper_export_gltf(const struct DraperDocument *doc, const char *path);
/**
 * Triangulate the document and export to Wavefront OBJ.
 *
 * Convenience function that triangulates the document and writes
 * the result to an OBJ file in a single call.
 *
 * Returns `DraperResult::Success` on success, or an error code on failure.
 */
enum DraperResult draper_export_obj(const struct DraperDocument *doc, const char *path);
/**
 * Triangulate the document and export to 3MF (3D Manufacturing Format).
 *
 * Convenience function that triangulates the document and writes
 * the result to a 3MF file in a single call.
 *
 * Returns `DraperResult::Success` on success, or an error code on failure.
 */
enum DraperResult draper_export_3mf(const struct DraperDocument *doc, const char *path);
/**
 * Fillet (round) an edge of the solid at `solid_index`.
 * `edge_index` is the TopoId of the edge to fillet; `radius` is in mm.
 */
enum DraperResult draper_solid_fillet_edge(struct DraperDocument *doc,
                                           uintptr_t solid_index,
                                           uintptr_t edge_index,
                                           double radius);
/**
 * Chamfer (bevel) an edge of the solid at `solid_index`.
 * `distance` is the linear distance from the original edge to the new face.
 */
enum DraperResult draper_solid_chamfer_edge(struct DraperDocument *doc,
                                            uintptr_t solid_index,
                                            uintptr_t edge_index,
                                            double distance);
/**
 * Shell the solid at `solid_index` — creates an inward offset by
 * `thickness` mm.
 */
enum DraperResult draper_solid_make_shell(struct DraperDocument *doc,
                                          uintptr_t solid_index,
                                          double thickness);
/**
 * Run a single GDT check on the triangulated mesh of `solid_index`.
 */
struct DraperGdtResult draper_solid_gdt_check(const struct DraperDocument *doc,
                                              uintptr_t solid_index,
                                              enum DraperGdtType check_type,
                                              double tolerance_value,
                                              double datum_axis_x,
                                              double datum_axis_y,
                                              double datum_axis_z,
                                              uint8_t use_datum_axis,
                                              double nominal_pos_x,
                                              double nominal_pos_y,
                                              double nominal_pos_z,
                                              uint8_t use_nominal_pos,
                                              double nominal_angle_deg,
                                              uint8_t use_nominal_angle);
/**
 * Run all GDT checks passed as a JSON array. Returns results as JSON
 * string (caller MUST free with `draper_free_string`).
 */
char *draper_solid_gdt_check_all(const struct DraperDocument *doc,
                                 uintptr_t solid_index,
                                 const char *json_specs);
/**
 * Free a string previously returned by any draper_* function.
 */
void draper_free_string(char *s);
/**
 * Convert a STEP file to a USDA (USD ASCII) file.
 */
enum DraperResult draper_export_step_to_usda(const char *step_path,
                                             const char *output_path,
                                             double chord_tolerance,
                                             uint8_t smooth_normals,
                                             uint8_t include_camera,
                                             uint8_t include_light);
/**
 * Get a JSON array of all edges in the solid at `solid_index`.
 * Each entry: `{ "id": N, "curve_type": "Line"|"Circle"|..., "face_ids": [a, b] }`.
 */
char *draper_solid_list_edges(const struct DraperDocument *doc, uintptr_t solid_index);
/**
 * Delete a face from a solid. **WARNING**: breaks watertightness.
 * Use only when replacing with another operation.
 */
enum DraperResult draper_solid_delete_face(struct DraperDocument *doc,
                                           uintptr_t solid_index,
                                           uintptr_t face_index);
/**
 * Reverse the orientation of a face (swap forward flag).
 */
enum DraperResult draper_solid_reverse_face(struct DraperDocument *doc,
                                            uintptr_t solid_index,
                                            uintptr_t face_index);
/**
 * Compute the axis-aligned bounding box of the document's mesh.
 * Writes the 6 floats (min_x, min_y, min_z, max_x, max_y, max_z) to `out_bbox`
 * (must point to an array of at least 6 f64s).
 */
enum DraperResult draper_document_bbox(const struct DraperDocument *doc, double *out_bbox);