bindings/python/draper.py


    # Face management
    lib.draper_solid_delete_face.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_size_t]
    lib.draper_solid_delete_face.restype = ctypes.c_int32
    lib.draper_solid_reverse_face.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_size_t]
    lib.draper_solid_reverse_face.restype = ctypes.c_int32

    # GDT
    class _GdtResult(ctypes.Structure):
        _fields_ = [
            ("tolerance_value", ctypes.c_double),
            ("actual_deviation", ctypes.c_double),
            ("passed", ctypes.c_uint8),
            ("status_code", ctypes.c_uint8),
        ]
    lib._GdtResult = _GdtResult
    lib.draper_solid_gdt_check.argtypes = [
        ctypes.c_void_p, ctypes.c_size_t, ctypes.c_int32, ctypes.c_double,
        ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_uint8,
        ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_uint8,
        ctypes.c_double, ctypes.c_uint8,
    ]
    lib.draper_solid_gdt_check.restype = _GdtResult
    lib.draper_solid_gdt_check_all.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_char_p]
    lib.draper_solid_gdt_check_all.restype = ctypes.c_void_p

    # String free + edge listing + bbox
    lib.draper_free_string.argtypes = [ctypes.c_void_p]
    lib.draper_free_string.restype = None
    lib.draper_solid_list_edges.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
    lib.draper_solid_list_edges.restype = ctypes.c_void_p
    lib.draper_document_bbox.argtypes = [ctypes.c_void_p, ctypes.POINTER(ctypes.c_double)]
    lib.draper_document_bbox.restype = ctypes.c_int32

    # STEP → USDA
    lib.draper_export_step_to_usda.argtypes = [
        ctypes.c_char_p, ctypes.c_char_p, ctypes.c_double,
        ctypes.c_uint8, ctypes.c_uint8, ctypes.c_uint8,
    ]
    lib.draper_export_step_to_usda.restype = ctypes.c_int32


# ============================================================
# Public API
# ============================================================

def version() -> str:
    """Return the library version as a string (e.g. '0.1.0')."""
    lib = _get_lib()
    raw = lib.draper_version_string()
    return raw.decode("utf-8") if raw else "unknown"


def version_tuple() -> tuple:
    """Return the library version as a (major, minor, patch) tuple."""
    lib = _get_lib()
    return (lib.draper_version_major(),
            lib.draper_version_minor(),
            lib.draper_version_patch())


def has_feature(feature: str) -> bool:
    """Check whether the library supports a named feature.

    Feature names: step_import, step_export, stl_export, gltf_export,
    obj_export, 3mf_export, boolean_ops, healing, validation,
    analytical_queries, bvh.
    """
    lib = _get_lib()
    return lib.draper_has_feature(feature.encode("utf-8"))


# ============================================================
# Mesh class
# ============================================================

class Mesh:
    """Wrapper around a DraperMesh opaque handle.

    Obtain a Mesh via Document.triangulate().  Call close() or use
    as a context manager to free the underlying handle.
    """

    def __init__(self, handle: int):
        self._handle = handle

    def __enter__(self):
        return self

    def __exit__(self, *args):
        self.close()

    def close(self) -> None:
        """Free the mesh handle."""
        if self._handle:
            _get_lib().draper_mesh_free(self._handle)
            self._handle = None

    @property
    def vertex_count(self) -> int:
        """Number of vertices in the mesh."""
        return _get_lib().draper_mesh_vertex_count(self._handle)

    @property
    def triangle_count(self) -> int:
        """Number of triangles in the mesh."""
        return _get_lib().draper_mesh_triangle_count(self._handle)

    def get_vertices(self) -> list:
        """Return vertex positions as a list of (x, y, z) tuples."""
        n = self.vertex_count
        if n == 0:
            return []
        buf = (ctypes.c_double * (n * 3))()
        written = _get_lib().draper_mesh_get_vertices(self._handle, buf, n)
        result = []
        for i in range(written):
            result.append((buf[i * 3], buf[i * 3 + 1], buf[i * 3 + 2]))
        return result

    def get_triangles(self) -> list:
        """Return triangle indices as a list of (i, j, k) tuples."""
        n = self.triangle_count
        if n == 0:
            return []
        buf = (ctypes.c_uint32 * (n * 3))()
        written = _get_lib().draper_mesh_get_triangles(self._handle, buf, n)
        result = []
        for i in range(written):
            result.append((buf[i * 3], buf[i * 3 + 1], buf[i * 3 + 2]))
        return result

    def export_stl(self, path: str, binary: bool = True) -> None:
        """Export mesh to STL file."""
        _check_result(_get_lib().draper_mesh_export_stl(
            self._handle, path.encode("utf-8"), 1 if binary else 0
        ))


# ============================================================
# Document class
# ============================================================

class Document:
    """High-level Python wrapper for a 3Draper document.

    Usage:
        doc = Document("MyModel")
        doc.add_box(1.0, 2.0, 3.0)
        doc.export_gltf("output.glb")
        doc.close()

    Or as a context manager:
        with Document("MyModel") as doc:
            doc.add_sphere(1.0)
            vol = doc.volume()
    """

    def __init__(self, name: str = "Untitled"):
        lib = _get_lib()
        self._handle = lib.draper_document_new(name.encode("utf-8"))
        if not self._handle:
            raise DraperError(DraperResult.UNKNOWN_ERROR, "Failed to create document")

    def __enter__(self):
        return self

    def __exit__(self, *args):
        self.close()

    def close(self) -> None:
        """Free the document handle."""
        if self._handle:
            _get_lib().draper_document_free(self._handle)
            self._handle = None

    # ----------------------------------------------------------
    # Shape builders
    # ----------------------------------------------------------

    def add_box(self, dx: float, dy: float, dz: float) -> None:
        """Add a box primitive with dimensions (dx, dy, dz)."""
        _check_result(_get_lib().draper_document_add_box(
            self._handle, dx, dy, dz
        ))

    def add_cylinder(self, radius: float, height: float) -> None:
        """Add a cylinder primitive."""
        _check_result(_get_lib().draper_document_add_cylinder(
            self._handle, radius, height
        ))

    def add_sphere(self, radius: float) -> None:
        """Add a sphere primitive."""
        _check_result(_get_lib().draper_document_add_sphere(
            self._handle, radius
        ))

    def add_cone(self, radius: float, height: float) -> None:
        """Add a cone primitive."""
        _check_result(_get_lib().draper_document_add_cone(
            self._handle, radius, height
        ))

    def add_torus(self, major_radius: float, minor_radius: float) -> None:
        """Add a torus primitive."""
        _check_result(_get_lib().draper_document_add_torus(
            self._handle, major_radius, minor_radius
        ))

    def add_engine(self) -> None:
        """Add a built-in ICE engine model."""
        _check_result(_get_lib().draper_document_add_engine(self._handle))

    # ----------------------------------------------------------
    # Properties
    # ----------------------------------------------------------

    @property
    def solid_count(self) -> int:
        """Number of solids in the document."""
        return _get_lib().draper_document_solid_count(self._handle)

    # ----------------------------------------------------------
    # Triangulation
    # ----------------------------------------------------------

    def triangulate(self) -> Mesh:
        """Triangulate the document and return a Mesh object."""
        handle = _get_lib().draper_document_triangulate(self._handle)
        if not handle:
            raise DraperError(DraperResult.TRIANGULATION_ERROR,
                              _get_last_error_message())
        return Mesh(handle)

    # ----------------------------------------------------------
    # Analytical queries
    # ----------------------------------------------------------

    def volume(self) -> float:
        """Compute the total volume of all solids in the document."""
        return _get_lib().draper_solid_volume(self._handle)

    def surface_area(self) -> float:
        """Compute the total surface area of all solids in the document."""
        return _get_lib().draper_solid_surface_area(self._handle)

    # ----------------------------------------------------------
    # Validation
    # ----------------------------------------------------------

    def validate(self) -> None:
        """Run topology validation on all solids.

        Raises DraperError if any error-level issues are found.
        Warnings and info are available in the exception message.
        """
        code = _get_lib().draper_validate_step(self._handle)
        _check_result(code)

    # ----------------------------------------------------------
    # Export
    # ----------------------------------------------------------

    def export_step(self, path: str) -> None:
        """Export the document to STEP AP242 format."""
        _check_result(_get_lib().draper_document_export_step(
            self._handle, path.encode("utf-8")
        ))

    def export_gltf(self, path: str) -> None:
        """Export the document to glTF 2.0 (GLB binary) format."""
        _check_result(_get_lib().draper_export_gltf(
            self._handle, path.encode("utf-8")
        ))

    def export_obj(self, path: str) -> None:
        """Export the document to Wavefront OBJ format."""
        _check_result(_get_lib().draper_export_obj(
            self._handle, path.encode("utf-8")
        ))

    def export_3mf(self, path: str) -> None:
        """Export the document to 3MF (3D Manufacturing Format)."""
        _check_result(_get_lib().draper_export_3mf(
            self._handle, path.encode("utf-8")
        ))

    # ----------------------------------------------------------
    # Editing operations (fillet / chamfer / shell)
    # ----------------------------------------------------------

    def fillet_edge(self, solid_index: int, edge_index: int, radius: float) -> None:
        """Fillet (round) an edge of a solid.

        Parameters
        ----------
        solid_index : int
            Index of the solid in the document.
        edge_index : int
            TopoId of the edge. Pass 0 to auto-pick the first manifold edge.
        radius : float
            Fillet radius in mm.
        """
        _check_result(_get_lib().draper_solid_fillet_edge(
            self._handle, solid_index, edge_index, radius
        ))

    def chamfer_edge(self, solid_index: int, edge_index: int, distance: float) -> None:
        """Chamfer (bevel) an edge of a solid.

        Parameters
        ----------
        solid_index : int
            Index of the solid.
        edge_index : int
            TopoId of the edge. Pass 0 to auto-pick.
        distance : float
            Chamfer distance in mm.
        """
        _check_result(_get_lib().draper_solid_chamfer_edge(
            self._handle, solid_index, edge_index, distance
        ))

    def make_shell(self, solid_index: int, thickness: float) -> None:
        """Shell a solid (inward offset by `thickness` mm).

        Parameters
        ----------
        solid_index : int
            Index of the solid.
        thickness : float
            Shell thickness in mm.
        """
        _check_result(_get_lib().draper_solid_make_shell(
            self._handle, solid_index, thickness
        ))

    # ----------------------------------------------------------
    # Transform operations
    # ----------------------------------------------------------
